<resources>

    <string name="app_name">FIndIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="categories">Select Categories: </string>
    <string name="beauty">Beauty</string>
    <string name="movies">Movies</string>
    <string name="restaurants">Restaurants</string>
    <string name="outdoors">Outdoors</string>
    <string name="nearby">Nearby</string>
    <string name="somewhereElse">Somewhere Else</string>
    <string name="searchActivity">Search Activity</string>
    <string name="cityState">City, State</string>
    <string name="findIt">Find It</string>

</resources>